# RummikubSolve

./: .editorconfig  .env.example  .gitignore  AGENTS.md  Audit Report.md  Blueprint.md  CHANGELOG.md  IMPLEMEMTATION EVALUATION.md  PLAY MODE DEV PLAN.md  PUZZLE_DIFFICULTY_PROBLEM.md  PUZZLE_REWORK_STATUS.md  Puzzle Generation Rebuild Plan.md  Puzzle Generation System — Full Rebuild Implementation Plan  Puzzle Rework Plan.md  README.md  SKIN Brainstorm.md  TODO.md  docker-compose.yml  package-lock.json  sonar-project.properties  ui_rework.jsx
backend/: Dockerfile  pyproject.toml
backend/api/: main.py  models.py
backend/solver/config/: __init__.py  rules.py
backend/solver/engine/: ilp_formulation.py  objective.py  solver.py
backend/solver/generator/: board_builder.py  calibrate.py  difficulty_evaluator.py  difficulty_weights.json  export_telemetry.py  gen_calibration_batch.py  generator_core.py  legacy_sacrifice.py  move_generator.py  pregenerate.py  puzzle_generator.py  puzzle_result.py  puzzle_store.py  set_changes.py  set_enumerator.py  telemetry_store.py  tile_pool.py  tile_remover.py
backend/solver/models/: __init__.py  board_state.py  tile.py  tileset.py
backend/solver/output/: diff_calculator.py  explanation.py  solution_formatter.py
backend/solver/validator/: rule_checker.py  solution_verifier.py
backend/tests/: conftest.py  test_models.py
backend/tests/api/: test_calibration_batch_endpoint.py  test_puzzle_endpoint.py  test_solve_endpoint.py  test_telemetry_endpoint.py
backend/tests/solver/: test_board_builder.py  test_difficulty_evaluator.py  (+17 more)
(+106 files in other folders)
